<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.micro-digiservices</groupId>
	<artifactId>micro-digiservices</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>micro-digiservices</name>

	<url>http://www.example.com</url>

	<modules>
		<module>authorizationserver</module>
		<module>discoveryserver</module>
		<module>gateway</module>
		<module>userservice</module>
		<module>ebanking</module>
		<module>notificationservice</module>
        <module>ecreditservice</module>
    </modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>21</maven.compiler.release>
		<spring.boot.maven.plugin.version>3.4.3</spring.boot.maven.plugin.version>
		<spring.boot.dependencies.version>3.4.3</spring.boot.dependencies.version>
		<spring-cloud.version>2024.0.0</spring-cloud.version>
		<image>doukoure93/${project.artifactId}:${project.version}</image>
		<jib.httpTimeout>300000</jib.httpTimeout>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring.boot.dependencies.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.modelmapper</groupId>
			<artifactId>modelmapper</artifactId>
			<version>3.2.1</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-openfeign</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<version>${spring.boot.maven.plugin.version}</version>
					<executions>
						<execution>
							<goals>
								<goal>repackage</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>com.google.cloud.tools</groupId>
					<artifactId>jib-maven-plugin</artifactId>
					<version>3.4.4</version>
					<configuration>
						<from>
							<image>eclipse-temurin:21.0.5_11-jdk-ubi9-minimal@sha256:63be2e952c201fcd74f8651664984945bbede1e8978ef15995d79ae29c95e281</image>
							<platforms>
								<platform>
									<architecture>arm64</architecture>
									<os>linux</os>
								</platform>
								<platform>
									<architecture>amd64</architecture>
									<os>linux</os>
								</platform>
							</platforms>
						</from>
						<to>
							<tags>
								<tag>latest</tag>
							</tags>
						</to>

					</configuration>
					<executions>
						<execution>
							<phase>package</phase>
							<goals>
								<goal>build</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
